--- a/views/slider.jade
+++ b/views/slider.jade
@@ -3,6 +3,10 @@ head
     link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css')
 body
     .slider#banner
+        .slides
+            -for(var i = 6; --i;)
+                img(src="imgs/#{i}.jpg")
+    //
         span
             i.fa.fa-angle-left
         span.right
