--- a/views/slider.styl
+++ b/views/slider.styl
@@ -51,3 +51,17 @@ i, .dot
 @keyframes lineLoader
   from
     width 0
+
+.slider
+  overflow hidden
+  .slides
+    position relative
+    img
+      position absolute
+      width 100%
+      z-index -1
+      &:first-child
+        position relative
+
+#banner
+  width 100%
