--- a/views/slider.jade
+++ b/views/slider.jade
@@ -3,6 +3,8 @@ head
     link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css')
 body
     .slider#banner
+        .autoSlider
+            .value
         .slides
             -for(var i = 6; --i;)
                 img(src="imgs/#{i}.jpg")
