--- a/views/slider.styl
+++ b/views/slider.styl
@@ -63,5 +63,13 @@ i, .dot
       &:first-child
         position relative
 
+.autoSlider
+  width 100%
+  height .2em
+  .value
+    width 5%
+    height 100%
+    background mainColor
+
 #banner
   width 100%
