--- a/views/slider.jade
+++ b/views/slider.jade
@@ -1,3 +1,4 @@
+doctype html
 head
     link(rel='stylesheet' href='slider.css')
     link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css')
@@ -13,4 +14,5 @@ body
             i.fa.fa-angle-left
         span.right
             i.fa.fa-angle-right
+    script(src='hammer.min.js')
     script(src='slider.js')
