--- a/views/slider.styl
+++ b/views/slider.styl
@@ -58,16 +58,20 @@ i, .dot
     position relative
     img
       position absolute
+      left 0
       width 100%
-      z-index -1
+      z-index -2
+      transform translateX(100%)
+      transition 1s ease
       &:first-child
         position relative
+        transform translateX(0)
 
 .autoSlider
   width 100%
   height .2em
   .value
-    width 5%
+    width 0
     height 100%
     background mainColor
 
