--- a/views/slider.jade
+++ b/views/slider.jade
@@ -9,8 +9,9 @@ body
         .slides
             -for(var i = 5; --i;)
                 img(src="imgs/#{i}.jpg")
-    //
-        span
+
+    .slider#objects
+        .arrows
             i.fa.fa-angle-left
         span.right
             i.fa.fa-angle-right
