slides not slider

--- a/views/slider.styl
+++ b/views/slider.styl
@@ -53,8 +53,10 @@ i, .dot
     width 0
 
 .slider
-  overflow hidden
+  position relative
   .slides
+    cursor pointer
+    overflow hidden
     position relative
     img
       position absolute
