--- a/views/slider.styl
+++ b/views/slider.styl
@@ -100,7 +100,9 @@ i, .dot
 
 .dualView
   .slide
-    width 50%
+    > *
+      width 50%
+      transform translateX(0%) !important
 
 #banner
   width 100%
