--- a/views/slider.styl
+++ b/views/slider.styl
@@ -57,6 +57,9 @@ html
       left 0
       width 100%
       z-index -2
+      display flex
+      align-items center
+      justify-content center
       transform translateX(100%)
       transition 1s ease
       &:first-child
